<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	<item
		android:id="@+id/serch_menu"
		android:icon="@drawable/search_icon"
		android:iconTint="@color/white"
		android:title="@string/search"
		app:actionViewClass="androidx.appcompat.widget.SearchView"
		app:showAsAction="ifRoom"
		tools:targetApi="o" />

	<group
		android:id="@+id/menu_group"
		android:checkableBehavior="single">
		<item
			android:id="@+id/filter"
			android:title="@string/filter">
			<menu>
				<item
					android:id="@+id/high"
					android:title="@string/high" />
				<item
					android:id="@+id/low"
					android:title="@string/low" />
			</menu>
		</item>

	</group>

	<item
		android:id="@+id/delete_all"
		android:icon="@drawable/search_icon"
		android:title="@string/delete_all" />

</menu>